--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ packages = ["src/backlite"]
 
 [project]
 name = "backlite"
-version = "0.0.2"
-description = "Dependency injection without the boilerplate."
+version = "0.0.3"
+description = "A file-based caching library backed by SQLite."
 readme = "README.md"
 requires-python = ">=3.11,<4"
 license = { file = "LICENSE.txt" }
@@ -20,9 +20,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python",
 ]
-dependencies = [
-    "filelock>=3.17.0,<4"
-]
+dependencies = ["filelock>=3.17.0,<4"]
 [project.urls]
 Source = "https://github.com/rmorshea/backlite"
 
@@ -33,11 +31,7 @@ dev = [
     { include-group = "lint" },
     { include-group = "test" },
 ]
-util = [
-    "click==8.1.7",
-    "ipykernel==6.29.5",
-    "copier==9.4.1",
-]
+util = ["click==8.1.7", "ipykernel==6.29.5", "copier==9.4.1"]
 docs = [
     { include-group = "test" },
     "mkdocs-gen-files==0.5.0",
