--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python",
 ]
-dependencies = ["paramorator>=1.0.2"]
+dependencies = [
+    "anyio>=4.8.0",
+    "paramorator>=1.0.2",
+]
 [project.urls]
 Source = "https://github.com/rmorshea/backlite"
 
